fix alignmnets

--- a/src/pages/Newsletter/Newsletter.css
+++ b/src/pages/Newsletter/Newsletter.css
@@ -119,7 +119,8 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        margin-left: 50px;
+        margin-left: auto;
+        margin-right: auto;
     }
   .container{
     margin-top:50px !important
